# codebrew-2025

./: README.md  docker-compose.yml
.github/workflow/: ci.yml
backend/: .gitignore  Cargo.toml  Dockerfile  vercel.json
backend/api/: test.rs
backend/src/: game.rs  main.rs
frontend/: .dockerignore  Dockerfile  bun.lockb  index.html  package.json  paper-active-model.tsx  paper-inactive-model.tsx  television-active-model.tsx  television-inactive-model.tsx  vite.config.ts
frontend/public/models/: astronaut.glb  book-inactive.glb  ds-inactive.glb  paper-inactive.glb  phone-inactive.glb  player.glb  room.glb  television-active.glb
frontend/src/: index.css  main.tsx  routeTree.gen.ts  store.ts
frontend/src/api/: constants.ts
frontend/src/api/hooks/: get-tasks.ts  use-hello-world.ts
frontend/src/api/types/: tasks.ts
frontend/src/components/: astronaut-model.tsx  countdown.tsx  debug.tsx  flow.tsx  game-over.tsx  game-ui.tsx  lobby.tsx  overlay.tsx  player-selection.tsx  tasks.tsx  torii.tsx  utils.ts
frontend/src/game/: constants.ts  game.tsx  utils.ts
frontend/src/game/components/: astronaut.tsx  book.tsx  boombox.tsx  countdown.tsx  debug.tsx  ds.tsx  example.tsx  first-person-camera.tsx  first-person-controller.tsx  game-over.tsx  gameboy.tsx  interaction-object.tsx  lamp.tsx  level.tsx  lobby.tsx  outline-effect.tsx  paper.tsx  phone.tsx  player-selection.tsx  player.tsx  television.tsx  tooltip.tsx
frontend/src/game/models/: Blue.tsx  astronaut-model.tsx  (+18 more)
frontend/src/routes/: RootComponent.tsx  __root.tsx  game.tsx  index.tsx  login.tsx
(+7 files in other folders)
