[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
rocket = "0.5.1"
tokio = { version = "1.42.1", features = ["full"] }
serde_json = "1.0.140"
vercel_runtime = "1.1.4"
