[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
rocket = "0.5.1"
rocket_cors = "0.6.0"
tokio = { version = "1.42.1", features = ["full"] }
serde_json = "1.0.140"
ws = { package = "rocket_ws", version = "0.1.1" }
rand = "0.9.1"
